<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="10dp"
	android:orientation="vertical"
>
	<Button
		android:id="@+id/sms_list_btn"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/view_sms"
	/>
	<Button
		android:id="@+id/led_control_btn"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/control_leds"
	/>
	<Button
		android:id="@+id/predetermined_words_btn"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/predetermined_words"
	/>
	<Button
		android:id="@+id/custom_speak_btn"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/custom_speak"
	/>
	<ToggleButton
		android:id="@+id/toggle_background_speak"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textOn="@string/disable_background_speak"
		android:textOff="@string/enable_background_speak"
		android:checked="false"
	/>
</LinearLayout>