<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="10dp"
	android:orientation="vertical"
>
	<Button
		android:id="@+id/led_normal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/mode_normal"
	/>
	<Button
		android:id="@+id/led_party"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/mode_party"
	/>
	<Button
		android:id="@+id/led_strobe"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/mode_strobe"
	/>
	<Button
		android:id="@+id/led_applause"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/mode_applause"
	/>
	<Button
		android:id="@+id/led_boo"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/mode_boo"
	/>
</LinearLayout>